-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
Follow-up from JDK-8325106: We hit an assert because we create a wrong JVMState in LibraryCallKit::arraycopy_restore_alloc_state for re-executing the newNullRestrictedArray intrinsic because the code does not account for the class argument on stack in addition to the size.
- relates to
-
JDK-8333037 [lworld] Part 2: Prepare compiler implementation and tests for JEP 401
-
- Resolved
-