8326048: [lworld] LibraryCallKit::arraycopy_restore_alloc_state needs to handle _newNullRestrictedArray intrinsic