test/hotspot/jtreg/compiler/arraycopy/TestArrayCopyNoInitDeopt.java
@@ -111,8 +111,7 @@ public class TestArrayCopyNoInitDeopt {
 
             // should deoptimize for type check
             if (!deoptimize(method_m1, src_obj)) {
-                // TODO 8325106 Currently disabled in LibraryCallKit::arraycopy_restore_alloc_state
-                // throw new RuntimeException("m1 not deoptimized");
+                throw new RuntimeException("m1 not deoptimized");
             }
 
             WHITE_BOX.enqueueMethodForCompilation(method_m1, CompilerWhiteBoxTest.COMP_LEVEL_FULL_OPTIMIZATION);
@@ -142,8 +141,7 @@ public class TestArrayCopyNoInitDeopt {
 
                 // should deoptimize for speculative type check
                 if (!deoptimize(method_m2, src_obj)) {
-                    // TODO 8325106 Currently disabled in LibraryCallKit::arraycopy_restore_alloc_state
-                    // throw new RuntimeException("m2 not deoptimized");
+                    throw new RuntimeException("m2 not deoptimized");
                 }
 
                 WHITE_BOX.enqueueMethodForCompilation(method_m2, CompilerWhiteBoxTest.COMP_LEVEL_FULL_OPTIMIZATION);
@@ -154,8 +152,7 @@ public class TestArrayCopyNoInitDeopt {
 
                 // should deoptimize for actual type check
                 if (!deoptimize(method_m2, src_obj)) {
-                    // TODO 8325106 Currently disabled in LibraryCallKit::arraycopy_restore_alloc_state
-                    // throw new RuntimeException("m2 not deoptimized");
+                    throw new RuntimeException("m2 not deoptimized");
                 }
 
                 WHITE_BOX.enqueueMethodForCompilation(method_m2, CompilerWhiteBoxTest.COMP_LEVEL_FULL_OPTIMIZATION);
